2025-05-30  Kunihiro Ishiguro  <kunihiro@zebra.dev>

	* zebra-rs/src/config/manager.rs (ConfigManager.process_message):
	Fix panic of "show" commands when protocol module has not yet been
	started.

	* version 0.6.5.